feat: progress bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="btn" id="next">Next</button>
 
     </div>
-    <script>src = "main.js"</script>
+    <script src="main.js"></script>
 </body>
 
 </html>
